# color-name

./: .git-town.toml  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.MD  README.md  devbox.json
src/: Colors.rs  colors.rs  colors_array.rs  colors_constants.rs  lib.rs  main.rs
src/css/: constants.rs  mod.rs
src/utils/: euclidean_distance.rs  mod.rs
