[package]
name = "color-name"
version = "1.1.1"
authors = ["Ben Hamida Abdelkarim <annymosse@gmail.com>"]
edition = "2018"
homepage = "https://github.com/annymosse/color-name"
repository = "https://github.com/annymosse/color-name"
autobenches = true
description = """
A crate with color names and its values and usefull functions inluded to get similar colour name by RGB data;
Based on css-color names.
"""

license = "MIT OR Apache-2.0"
keywords = [
    "color",
    "colors",
    "color-name-similar",
    "closest-color-name",
    "color-names",
]
categories = [
    "command-line-utilities",
    "command-line-interface",
    "graphics",
    "text-editors",
]
exclude = [
    "tmp/",
]

[badges]
travis-ci = { repository = "annymosse/color-name" }

[dependencies]
